tests/NormalTests/paczka1/fuzzy1/44923420.err
Error in line 1: EkQ S829 18,9
Error in line 5: A770 S593 59,58
Error in line 6: e8A4 S822 94,7
Error in line 13: qY82zyzBmd S593 90,7
Error in line 8: Rw7rRMC S593 52,0
Error in line 12: LkSD9D270Zz S829 93,7
Error in line 25: LkSD9D270Zz S822 51,6
Error in line 26: A770 S593 111,7
